@@ -364,9 +364,15 @@ namespace Rcpp {
         }
 
 
+        inline SEXP get_sexp_impl() const {
+            if (buffer.find('\0') != std::string::npos)
+                throw embedded_nul_in_string();
+            return Rf_mkCharLenCE(buffer.c_str(), buffer.size(), enc);
+        }
+
         inline SEXP get_sexp() const {
             RCPP_STRING_DEBUG_1("String::get_sexp const (valid = %d) ", valid);
-            return valid ? data : Rf_mkCharCE(buffer.c_str(), enc);
+            return valid ? data : get_sexp_impl();
         }
 
         inline SEXP get_sexp() {
@@ -395,9 +401,11 @@ namespace Rcpp {
             enc = encoding;
 
             if (valid) {
-                data = Rcpp_ReplaceObject(data, Rf_mkCharCE(Rf_translateCharUTF8(data), encoding));
+                // TODO: may longjmp on failure to translate?
+                const char* translated = Rf_translateCharUTF8(data);
+                data = Rcpp_ReplaceObject(data, Rf_mkCharCE(translated, encoding));
             } else {
-                data = Rf_mkCharCE(buffer.c_str(), encoding);
+                data = get_sexp_impl();
                 Rcpp_PreserveObject(data);
                 valid = true;
             }
@@ -469,7 +477,7 @@ namespace Rcpp {
         inline void setData() {
             RCPP_STRING_DEBUG("setData");
             if (!valid) {
-                data = Rf_mkCharCE(buffer.c_str(), enc);
+                data = get_sexp_impl();
                 Rcpp_PreserveObject(data);
                 valid = true;
             }
